Fixed heading alignment

--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -32,7 +32,7 @@ h1{
     margin-top: 120px;
 }
 
-.heading-words{
+.heading{
     text-align: center;
 }
 
@@ -42,9 +42,8 @@ h3{
 }
 .box-below-heading{
     border: 2px solid lightgrey;
-    text-align: center;
     width: 350px;
-    margin-left: 500px;
+    display: inline-block;
 }
 
 .middleImages {
